--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
 	  padding-top: 1% !important;
-	      color: white;
+	      color: white !important;
     text-transform: uppercase;
     font-weight: 700 !important;
     width: 100%;
@@ -33,8 +33,8 @@ element1
 
 {
     position: absolute;
-    margin-top: 100px;
-	margin-left: 26%;
+    margin-top: 3%;
+	margin-left: 15%;
     padding: 50px;
 	width: 70%;
     height: auto;
@@ -71,85 +71,21 @@ a:hover /* Apparence au survol des liens */
    color: grey;
 }
 
-nav 
+nav
 {
 
-    margin-top: 100px;
-    padding: 12px;
-	width: 15%;
-    height: auto;
-	border: 1px solid black;
-	background-color: #6B6B6B;
-	margin-left: 100px;
-	z-index: 1;
+height:8%;
+
 }
-
-
-nav li
+nav ul li
 {
-list-style-type:none;
-float:left;
-}
-nav ul
-{
-margin: 0px;
-padding: 0px;
+margin : 0 88px;	
 }
 
-
-
-nav a
-{
-display : inline-block;
-text-decoration: none;
-padding: 20px 30px;
-color: #FFF;
-text-transform: uppercase;
-font-size: 15px;
-}
-
-.table
-{
-display:table;
-margin: 0 auto;
-}
-
-.menu-ind:hover
-{	
-border-top:5px solid #4c8;
-background-color: RGBa (64, 200,130,0.15);
-}
-
-.menu-exp:hover
-{	
-border-top:5px solid #f1dc4f;
-background-color: RGBa (241, 211,79,0.15);
-}
-
-.menu-exp:hover
-{	
-border-top:5px solid #0070bb;
-background-color: RGBa (000, 112,192,0.15);
-}
-
-.menu-hob:hover
-{	
-border-top:5px solid #0070bb;
-background-color: RGBa (000, 112,192,0.15);
-}
-
-nav li:hover a
-{
- color: grey; 
-}
-
-i {
-	font-size : 50px;
-}
 
 @media screen and (min-width: 1000px) {
   nav {
-    margin-left:100px;
+	
 	
   }
   
@@ -164,8 +100,15 @@ i {
 	}
 		
 	nav {
-	margin-top:10px;
-	margin-left: 100px;
-	width:250px;
+	margin-top:0px;
+	margin-left: 0px;
+	width:-100px;
+	font-size: 1rem;
+	height:25%;
+	
 } 
+   header
+   {
+	   margin-top: 25%;
+   }
 }
