--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
 	background : #808080;
 	height : 110px;
 	padding : 0.5% 0;
+	margin-top : 4%;
 }
 
 header h2 {
@@ -81,6 +82,18 @@ nav ul li
 {
 margin : 0 88px;	
 }
+
+html .btn-primary
+{
+	background-color: #333;
+	border-color: #333;
+}
+html .btn-primary:hover
+{
+	background-color: #666;
+	border-color: #666;
+}
+	
 
 
 @media screen and (min-width: 1000px) {
